[AICH-34] 의존성 분리 예외 처리 개선